📝 Updated SKILL.md file